--- a/assets/css/hover.css
+++ b/assets/css/hover.css
@@ -70,9 +70,9 @@
 .ih-item.circle.effect1 .spinner {
   width: 120px;
   height: 120px;
- border: 5px solid #86826C;
-border-right-color: #62582D;
-border-bottom-color: #997518;
+ border: 5px solid #93640F;
+border-right-color: #4F2B07;
+border-bottom-color: #453816;
   border-radius: 50%;
   -webkit-transition: all 0.84s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
