--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,15 +46,12 @@ body.is-loading *
     -ms-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
-    color: #270B09;
-    text-shadow: -1px 1px 0 #773D3D;
+    color: #2C1F04;
+    text-shadow: -1px 1px 0 #5E453B;
     
 
 }
-#hslogo {
-    font-family: 'Skranji';
-    color: #BBB;
-}
+
 .welcometitle {
     font-family: 'Montserrat';
     
@@ -84,16 +81,16 @@ a {
 .navbar-collapse.collapse {
     border-bottom: 1px solid #202330;
 
-    background: -webkit-linear-gradient(rgb(176, 39, 39),rgb(55, 6, 34)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(rgb(176, 39, 39),rgb(55, 6, 34)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(rgb(176, 39, 39),rgb(55, 6, 34)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(rgb(176, 39, 39),rgb(55, 6, 34)); /* Standard syntax (must be last) */
+    background: -webkit-linear-gradient(rgb(174, 112, 29),#5A3812,rgb(40, 14, 9)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgb(174, 112, 29),#5A3812,rgb(40, 14, 9)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgb(174, 112, 29),#5A3812,rgb(40, 14, 9)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgb(174, 112, 29),#5A3812,rgb(40, 14, 9)); /* Standard syntax (must be last) */
 
 }
 .nav > li > a {
     font-size: 18px;
-    color: #270B09;
-    text-shadow: 1px 0px 0 #773D3D;
+    color: #2C1F04;
+text-shadow: 1px 0px 0 #5E453B;
 }
 
 .nav > li > a >span {
@@ -102,9 +99,9 @@ a {
 }
 .nav > li > a:not(#logo):hover, .nav > li > a:not(#logo):focus {
     background-color: transparent;
-    text-shadow: -1px 0px 0 #7B2F2F;
-    box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.59) inset;
-    color: #3D1212;
+    text-shadow: -1px 0px 5px #C35A02;
+box-shadow: 0px 0px 22px rgba(145, 92, 32, 0.74) inset;
+color: #DBA43E;
     
 }
 
