--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,12 +93,15 @@ a {
 }
 .nav > li > a >span {
     margin-right: 3px;
+ 
 }
 .nav > li > a:not(#logo):hover, .nav > li > a:not(#logo):focus {
     background-color: transparent;
     text-shadow: -1px 0px 5px #B0490A;
     box-shadow: 0px 0px 22px rgba(68, 36, 0, 0.74) inset;
     color: #E0C083;
+    border-left:1px solid #422F0B;
+    border-right:1px solid #422F0B;
 }
 .frame {
     max-width: 70%;
@@ -221,6 +224,13 @@ max-height: 350px !important;
 
     text-shadow: -1px 0px rgb(184, 180, 174), 0px 1px rgb(184, 180, 174), 1px 0px rgb(184, 180, 174), 0px -1px rgb(184, 180, 174);
     color: #443211;
+}
+.cardpick p{
+    font-family: 'Roboto';
+    font-weight: 800;
+    color: #A87842;
+    text-shadow: -1px 0px rgb(0, 0, 0), 0px 1px rgb(0, 0, 0), 1px 0px rgb(0, 0, 0), 0px -1px rgb(0, 0, 0);
+    font-size: 16px;
 }
 .deck:hover:before {
     content:'';
@@ -470,18 +480,16 @@ text-shadow: 0px 1px 2px #3D2B03;
 		        filter: blur(5px) grayscale(50%);*/
 
 }
-
+.modal-body p {
+    font-family: "Roboto";
+text-align: center;
+font-size: 16px;
+padding: 5px;
+}
+.classimgdiv img{
+    height: 200px;
+}
 .runcontainer {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    padding: 3%;
 }
 
-.runcontainer button {
-    margin-top: 10px;
-}
-
-.winloss {
-    margin-top: 20px;
-    display: inline;
-    width: 44%;
-    margin-right: 2.5%;
